--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -16,6 +16,11 @@ services:
       - mosquitto_log:/mosquitto/log
       - ./mosquitto/mosquitto.conf:/mosquitto/config/mosquitto.conf
 
+  mock_publisher:
+    build: ./mockPublisher
+    networks:
+      4i0n4s:
+
   logger:
     build: ./logger
     networks:
