--- a/forwarder/package.json
+++ b/forwarder/package.json
@@ -2,13 +2,14 @@
   "name": "logger",
   "version": "1.0.0",
   "description": "",
-  "main": "logger.js",
+  "main": "forwarder.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "mqtt": "^5.0.5"
+    "mqtt": "^5.0.5",
+    "node-fetch": "^2.7.0"
   }
 }
